styl/navbar.styl
@require "variables"
@require "clearfix"
@require "grid"
@require "z"

// Mixin: Navbar
//
// Create a full-width bar elevated to height 1 with sensible defaults (see example).
//
// ex. sm-navbar($bgcolor: $primary-color, $font-color: $light-text-color, $padding: 8px,
//           $use-container: true, $title-tag: "h1", $align-right: true, $fixed: true
//         )
sm-navbar($bgcolor = $primary-color, $font-color = $light-text-color, $padding = 8px,
      $use-container = true, $title-tag = "h1", $align-right = true, $fixed = true
    )
  sm-clearfix()
  position: relative
  color: $font-color
  background-color: $bgcolor
  sm-z(1)
  if $use-container
    sm-container()

  if $fixed
    position: fixed
    top: 0
    width: 100%

    // Make width 100% work with padding
    box-sizing: border-box

  > *
    display: inline-table
    color: $font-color
    padding: $padding
    vertical-align: middle

  > a
    &:hover
      background-color: lighten($bgcolor, 10%)
    &:active
      background-color: lighten($bgcolor, 20%)

  if $title-tag
    > {selector($title-tag)}
      display: inline-table
      margin: 0
      font-size: 1.25rem
      if $align-right
        float: left

  if $align-right
    text-align: right

